Descripción de los cambios realizados

--- a/texto.html
+++ b/texto.html
@@ -49,6 +49,12 @@
         opacity: 1;
       }
     }
+
+    @media (max-width: 600px) {
+      .subtitle {
+        font-size: 18px; /* Adjust font size for mobile devices */
+      }
+    }
   </style>
 </head>
 
